Archive2/3c/94ef62a6c05f0e/output
main.cpp:27:5: error: use of non-static data member 'top' of 'Tree' from nested type 'Node'
    top = right; //I suppose to get error here like "error : no object of type Tree specified"
    ^~~
main.cpp:25:41: warning: unused parameter 'p' [-Wunused-parameter]
void Tree<T>::Node::Node_Function(Tree* p)
                                        ^
1 warning and 1 error generated.
